refactor: 내 예약 정보 조회에서 승인 방식도 함께 조회되도록 리팩토링